update build for both Windows and Linux